[project]
name = "is-recaptchav2-safe"
version = "0.1.0"
description = "Educational research project analyzing reCAPTCHAv2 security using deep learning - UFABC AI Course"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "timm>=0.9.0",
  "pillow>=9.0.0",
  "matplotlib>=3.5.0",
  "pandas>=1.4.0",
  "scikit-learn>=1.0.0",
  "seaborn>=0.12.0",
  "tqdm>=4.64.0",
  "numpy>=1.22.0",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0.0", "ipykernel>=6.0.0", "notebook>=6.4.0"]

[project.urls]
Homepage = "https://github.com/caiostoduto/is-reCAPTCHAv2-safe"
Repository = "https://github.com/caiostoduto/is-reCAPTCHAv2-safe"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"
